--- a/vercel.json
+++ b/vercel.json
@@ -4,14 +4,21 @@
       {
         "src": "Gestion_Vehicules/wsgi.py",
         "use": "@vercel/python",
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+      },
+      {
+        "src": "build_files.sh",
+        "use": "@vercel/static-build",
         "config": {
-          "maxLambdaSize": "15mb",
-          "runtime": "python3.9"
+          "distDir": "staticfiles_build"
         }
       }
     ],
     "routes": [
-
+      {
+        "src": "/static/(.*)",
+        "dest": "/static/$1"
+      },
       {
         "src": "/(.*)",
         "dest": "Gestion_Vehicules/wsgi.py"
