--- a/requirements.txt
+++ b/requirements.txt
@@ -5,15 +5,15 @@ cycler==0.12.1
 Django==4.2.11
 django-admin-material-dashboard==1.0.10
 django-admin-soft-dashboard==1.0.12
-
+django-bootstrap-v5==1.0.11
 django-paginator==0.2a3
 Faker==24.0.0
 fonttools==4.49.0
 kiwisolver==1.4.5
-
+matplotlib==3.8.3
 numpy==1.26.4
 packaging==23.2
-
+pandas==2.2.1
 pillow==10.2.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
